# scitex-agentic-journal

./: .env.example  .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  cla.yml  pr-ci.yml  release-ci.yml
.scitex/dev/: cli-audit-dict.yaml
docs/dev/: m4-hub-app-wiring.md
examples/: 01_gate1_orcid_resolve.py  01_gate1_orcid_resolve.sh  02_gate1_code_repo_clone.py  02_gate1_code_repo_clone.sh  README.md
src/scitex_agentic_journal/: __init__.py  __main__.py  _cli.py
src/scitex_agentic_journal/_cli/: __init__.py  _decide.py  _hub_manifest.py  _publish.py  _review.py  _skills.py  _submit.py
src/scitex_agentic_journal/_decide/: __init__.py  _engine.py  _load_review.py  _persist.py  _rules.py  _types.py
src/scitex_agentic_journal/_decide/rules/: __init__.py  v1.yaml
src/scitex_agentic_journal/_django/: __init__.py  _manifest.py  apps.py  handlers.py  manifest.json  urls.py  views.py
src/scitex_agentic_journal/_gate1/: __init__.py  _clew_dag.py  _code_repo.py  _errors.py  _orcid.py
src/scitex_agentic_journal/_hub_app_publisher/: __init__.py  _derive_wrapper_manifest.py  _manifest.py  _resolver_adapter.py
src/scitex_agentic_journal/_mcp/: __init__.py  _audit.py  _scopes.py  _server.py  _tools.py
src/scitex_agentic_journal/_orcid/: __init__.py  _client.py  _link.py
src/scitex_agentic_journal/_ports/: __init__.py  _clew.py  _hub.py  _live_paper.py  _scheduler.py  _ui.py  _writer.py
src/scitex_agentic_journal/_publish/: __init__.py  _crossref.py  _handoff.py  _internal.py  _jalc.py  _live_paper_proxy.py  _load_records.py  _mint.py  _persist.py  _select.py  _types.py  _zenodo.py
src/scitex_agentic_journal/_re_review_badge/: __init__.py  _resolver.py  _types.py
src/scitex_agentic_journal/_review/: __init__.py  _adapters.py  _load_gate1.py  _local_adapter.py  _persist.py  _qwen_adapter.py  _rubric.py  _runner.py  _types.py
src/scitex_agentic_journal/_review/prompts/: __init__.py
src/scitex_agentic_journal/_review/prompts/v1/: __init__.py  claim_verify.md  methodology.md  novelty.md  reproducibility.md
src/scitex_agentic_journal/_skills/scitex-agentic-journal/: 01_installation.md  01_overview.md  02_quick-start.md  02_submission-bundle.md  03_gate1-checks.md  03_python-api.md  04_cli-reference.md  04_review-and-decision.md  05_publish-handoff.md  06_python-api.md  07_django-and-hub.md  08_mcp-and-agents.md  10_overview.md  11_submission-bundle.md  12_gate1-checks.md  13_review-and-decision.md  14_publish-handoff.md  15_python-api-detailed.md  20_env-vars.md  30_django-and-hub.md  31_mcp-and-agents.md  SKILL.md
src/scitex_agentic_journal/_submit/: __init__.py  _loader.py  _orchestrate.py  _persist.py  _types.py
tests/: _django_test_urls.py  test_django_app.py  test_mcp.py  test_ports.py  test_review.py
tests/examples/: test_01_gate1_orcid_resolve.py  test_02_gate1_code_repo_clone.py
tests/integration/: test_cross_package_imports.py  test_pipeline_end_to_end.py
tests/scitex_agentic_journal/: __init__.py  test__cli_submit.py  test_gate1_code_repo.py  test_gate1_orcid.py  test_smoke.py
tests/scitex_agentic_journal/_cli/: test__decide.py  test__hub_manifest.py  test__publish.py  test__review.py  test__skills.py
tests/scitex_agentic_journal/_decide/: test__engine.py  test__load_review.py  test__persist.py  test__rules.py
tests/scitex_agentic_journal/_fixtures/: orcid_0000-0002-1825-0097_record_garbled.json
tests/scitex_agentic_journal/_gate1/: test__clew_dag.py  test_code_repo.py  test_orcid.py
tests/scitex_agentic_journal/_gate1/_fixtures/: orcid_0000-0001-2345-6789_record_minimal.json  orcid_0000-0002-1825-0097_record.json
tests/scitex_agentic_journal/_hub_app_publisher/: __init__.py  test__derive_wrapper_manifest.py  test__manifest.py  test__resolver_adapter.py
tests/scitex_agentic_journal/_orcid/: test__link.py
tests/scitex_agentic_journal/_publish/: test__handoff.py  test__load_records.py  test__mint.py  test__persist.py  test__select.py  test__zenodo_sandbox.py
tests/scitex_agentic_journal/_re_review_badge/: __init__.py  test__resolver.py  test__resolver_branches.py  test__types.py
tests/scitex_agentic_journal/_review/: test__adapters.py  test__load_gate1.py  test__local_adapter.py  test__persist.py
tests/scitex_agentic_journal/_submit/: test__loader.py  test__orchestrate.py  test__persist.py
tests/scitex_agentic_journal/integration/: __init__.py  test_pipeline_end_to_end.py
